--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>1.12.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>it.sauronsoftware.cron4j</groupId>
+            <artifactId>cron4j</artifactId>
+            <version>2.2.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -84,6 +89,7 @@
                                 <includes>
                                     <include>org.json:json</include>
                                     <include>javax.mail:mail</include>
+                                    <include>it.sauronsoftware.cron4j:cron4j</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
